location markers from sample, sample updated to pipes from foursquare.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-slider.js"></script>
     <script src="js/frontend.js"></script>
+    <script src="js/frontend-locations.js"></script>
 </head>
 <body>
     <div class="navbar">
@@ -25,7 +26,7 @@
             </div>
         </div>
     </div>
-    <div class="content">
+    <div class="content google-maps">
         <div id="map"></div>
     </div>
 </body>
