use geoplanned to draw optinal route

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-slider.js"></script>
+    <script src="js/lib/geoDist.js"></script>
+    <script src="js/geoPlanner.js"></script>
     <script src="js/frontend.js"></script>
     <script src="js/frontend-locations.js"></script>
 </head>
